--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "ordia-consulting-services---professional-financial-solutions",
-  "private": true,
-  "version": "0.0.0",
+  "name": "ordia-consulting-services",
+  "version": "1.0.0",
+  "description": "Professional and modern financial consultant website with integrated AI advisory.",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "node server.js",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
+    "express": "^4.18.2",
     "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "@google/genai": "^1.35.0"
   },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "author": "Ordia Consulting Services",
+  "license": "MIT"
 }
