--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
+
 {
   "name": "ordia-consulting-services",
   "version": "1.0.0",
-  "description": "Professional and modern financial consultant website with integrated AI advisory.",
+  "description": "Professional financial consultant website.",
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "dev": "vite",
     "start": "node server.js",
     "build": "vite build",
     "preview": "vite preview"
@@ -15,9 +17,15 @@
     "react-dom": "^19.2.3",
     "@google/genai": "^1.35.0"
   },
+  "devDependencies": {
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "terser": "^5.31.0",
+    "typescript": "^5.5.0",
+    "vite": "^5.4.0"
+  },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "author": "Ordia Consulting Services",
-  "license": "MIT"
+  }
 }
